<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="1"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/edit_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autoSizeTextType="uniform"
            android:hint="@string/edit_recipe_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ingredients_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ingredients_title"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/ingredients_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp" />

        <LinearLayout
            android:id="@+id/container_add_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/type_ingredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:hint="@string/ingredient" />


            <EditText
                android:id="@+id/amount_ingredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:hint="@string/amount_hint"
                android:inputType="number" />

            <Spinner
                android:id="@+id/measurement_unit_spinner"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/add_ingredient_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="10dp"
            android:text="@string/add_button_text" />

        <EditText
            android:id="@+id/edit_recipe_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/set_your_short_recipe_description_here" />

        <EditText
            android:id="@+id/recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/set_your_recipe_description_here"
            android:text="@string/generic_recipe_description" />
    </LinearLayout>

    <Button
        android:id="@+id/add_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="798dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/add_recipe_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_weight="5" />

</androidx.constraintlayout.widget.ConstraintLayout>