<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/recipe_title"
            android:text="@string/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginBottom="15dp"
            android:autoSizeTextType="uniform" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/ic_recipe"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/ingredients_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_title"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Subtitle"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <ListView
            android:id="@+id/ingredients_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/add_all_ingredients_button"
            android:text="@string/add_all_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_gravity="right" />

        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generic_recipe_description"
            android:layout_margin="30dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>